crates/core/tests/snapshots/container_schema_test__schema_type__named_struct__supports_metadata.snap
---
source: crates/core/tests/container_schema_test.rs
expression: pretty_body(container.impl_schematic_type())
---
fn build_schema(mut schema: SchemaBuilder) -> Schema {
    schema
        .structure(
            StructType::new([
                (
                    "aa".into(),
                    {
                        let mut field = SchemaField::new(schema.infer::<String>());
                        field.comment = Some("Docs.".into());
                        field.deprecated = Some("Gone soon.".into());
                        field.env_var = Some("A_VAR".into());
                        field
                    },
                ),
                (
                    "b".into(),
                    {
                        let mut field = SchemaField::new(
                            schema.infer::<HashMap<String, String>>(),
                        );
                        field.aliases = ["bee", "bb"]
                            .into_iter()
                            .map(|alias| alias.to_string())
                            .collect::<Vec<_>>();
                        field.flatten = true;
                        field
                    },
                ),
                (
                    "c".into(),
                    {
                        let mut field = SchemaField::new(schema.infer::<usize>());
                        field.hidden = true;
                        field
                    },
                ),
                ("d".into(), SchemaField::new(schema.infer::<usize>())),
                ("f".into(), SchemaField::new(schema.infer_as_nested::<NestedConfig>())),
            ]),
        )
}
