crates/core/tests/snapshots/container_schema_test__schema_type__named_struct__supports_nested.snap
---
source: crates/core/tests/container_schema_test.rs
expression: pretty_body(container.impl_schematic_type())
---
fn build_schema(mut schema: SchemaBuilder) -> Schema {
    schema
        .structure(
            StructType::new([
                ("a".into(), SchemaField::new(schema.infer_as_nested::<NestedConfig>())),
                (
                    "b".into(),
                    {
                        let mut field = SchemaField::new(
                            schema.infer_as_nested::<Option<NestedConfig>>(),
                        );
                        field.nullable = true;
                        field
                    },
                ),
                (
                    "c".into(),
                    SchemaField::new(schema.infer_as_nested::<Vec<NestedConfig>>()),
                ),
                (
                    "d".into(),
                    SchemaField::new(
                        schema.infer_as_nested::<HashMap<String, CustomConfig>>(),
                    ),
                ),
                (
                    "e".into(),
                    SchemaField::new(schema.infer_as_nested::<Box<NestedConfig>>()),
                ),
            ]),
        )
}
